Subiendo Cambio Hoja de Vida CV

--- a/portafolio-cv/index.html
+++ b/portafolio-cv/index.html
@@ -67,7 +67,7 @@
             <p>Disfruto llevar a cabo la maquetación e interactividad de interfaces <i>web</i>, así como la optimización, para el buen posicionamiento y el rendimiento de carga de sitios y aplicaciones <i>web</i>.</p>
             <p>También cuento con experencia en el área de <i>Social Media</i>, <i>Marketing</i> de Contenidos y <i>SEO</i>.</p>
             <div class="text-center text-lg-left">
-                <a class="btn" href="#" target="_blank" rel="noopener">DESCARGA MI CV</a>
+                <a class="btn" href="docs/Miguel Angel Poveda Baque CV.pdf" target="_blank" rel="noopener">DESCARGA MI CV</a>
             </div>
         </article>
         <article>
